# node_project/server.js
@@ -11,11 +11,14 @@ const app = express();
 const port = process.env.PORT || 3000;
 
 // Middleware
+app.use(express.json());
+app.use(express.urlencoded({ extended: true }));
+
 app.use(cors({ origin: '*', methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS'] }));
 app.use(bodyParser.json());
-app.use('/users', require('./routes/users'));
+app.use('/clients', require('./routes/clients'));
 
-const swaggerDocument = JSON.parse(fs.readFileSync('./swagger.json', 'utf-8'));
+const swaggerDocument = JSON.parse(fs.readFileSync(__dirname + '/swagger.json', 'utf-8'));
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Connect to MongoDB
